--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "express": "^4.19.2",
+    "mysql2": "^3.9.4",
     "nodemon": "^3.1.0",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "sequelize": "^6.37.2"
   }
 }
