--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+      "aws-sdk": "^2.1597.0",
+      "bcrypt": "^5.1.1",
+      "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
-    "eslint": "^9.0.0",
+      "eslint": "^8.45.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "express": "^4.19.2",
+      "express-session": "^1.18.0",
+      "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.4",
     "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
